# nodejs-wayland-server

./: .gitignore  README.md  configure_meson.sh  copy-artifacts.js  index.d.ts  index.js  index_test.js  meson-build.sh  meson-cleanup.sh  meson-configure.sh  meson.build  meson_options.txt  package-lock.json  package.json  test.js
artifacts/: nodejs_wayland.d.ts
src/: wrapper.cpp
subprojects/: weston-fork.wrap
